# bbc

./: .gitignore  README.md  bbc.py  prettybib.py  pyproject.toml  requirements.txt  test_bbc.py  test_result.bib  test_result_no_todo.bib
bbc/: __init__.py  bbc.py
bbc/anthologies/: download_jmlr.sh  download_pmlr.sh
tests/: test_bbc.py
tests/data/: test_result.bib
